--- a/app/src/main/res/layout/activity_post_login.xml
+++ b/app/src/main/res/layout/activity_post_login.xml
@@ -4,9 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.conpeto.nullpointer.conpeto.LoginActivity"
-    tools:showIn="@layout/activity_login">
-
+    tools:context="com.conpeto.nullpointer.conpeto.PostLogin">
 
 </android.support.constraint.ConstraintLayout>
