done with google map with create group

--- a/app/src/main/res/layout/activity_join_group.xml
+++ b/app/src/main/res/layout/activity_join_group.xml
@@ -57,4 +57,13 @@
         android:layout_marginTop="95dp"
         android:text="@string/search_for_and_join_a_group" />
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        tools:context=".CreateGroup" />
+
 </RelativeLayout>
