--- a/app/src/main/res/layout/content_view_group.xml
+++ b/app/src/main/res/layout/content_view_group.xml
@@ -6,23 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.conpeto.nullpointer.conpeto.ViewGroup">
 
-    <TextView
-        android:id="@+id/group_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="150dp"
-        android:text="@string/below_is_a_list_of_groups_joined" />
-
-    <TextView
-        android:id="@+id/group_List"
-        android:layout_width="wrap_content"
-        android:layout_below="@+id/group_description"
-        android:layout_alignLeft="@id/group_description"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:layout_alignStart="@id/group_description" />
+<ListView
+        android:id="@+id/list_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/go_Back"
