--- a/app/src/main/res/layout/content_view_group.xml
+++ b/app/src/main/res/layout/content_view_group.xml
@@ -1,26 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.conpeto.nullpointer.conpeto.ViewGroup">
-
-<ListView
-        android:id="@+id/list_view"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
     <Button
         android:id="@+id/go_Back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="9dp"
         android:layout_marginLeft="9dp"
         android:layout_marginTop="66dp"
         android:text="@string/go_back" />
-
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/go_Back"
+        android:layout_alignParentLeft="true" />
 </RelativeLayout>
