--- a/app/src/main/res/layout/activity_search_categories.xml
+++ b/app/src/main/res/layout/activity_search_categories.xml
@@ -16,29 +16,23 @@
         android:text="@string/go_back" />
     <TextView
         android:id="@+id/group_info"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
         android:layout_alignParentStart="true"
         android:layout_below="@id/go_Back"
-        android:layout_alignParentLeft="true" />
-
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_width="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:text= "Please pick a category from the list below" />
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
         android:layout_alignParentStart="true"
         android:layout_below="@id/group_info"
         android:layout_alignParentLeft="true" />
 
-    <Button
-        android:id="@+id/delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/list_view"
-        android:layout_marginLeft="9dp"
-        android:text="DELETE GROUP" />
+
 
 </RelativeLayout>
