--- a/app/src/main/res/layout/activity_search_categories.xml
+++ b/app/src/main/res/layout/activity_search_categories.xml
@@ -50,5 +50,14 @@
         android:layout_alignParentStart="true"
         android:layout_below="@id/dist"
         android:layout_alignParentLeft="true" />
+    <Button
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinner2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text = "SEARCH"/>
 
 </RelativeLayout>
