--- a/app/src/main/res/layout/activity_join_group_info.xml
+++ b/app/src/main/res/layout/activity_join_group_info.xml
@@ -1,9 +1,51 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JoinGroupInfo">
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
+    <Button
+        android:id="@+id/go_Back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="9dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="66dp"
+        android:text="@string/go_back" />
+    <TextView
+        android:id="@+id/group_info"
+        android:textSize="16dip"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/go_Back"
+        android:layout_alignParentLeft="true" />
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/group_info"
+        android:layout_alignLeft="@id/group_info"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="-1dp" />
+
+    <Button
+        android:id="@+id/join"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/go_Back"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="184dp"
+        android:layout_marginLeft="184dp"
+        android:layout_toRightOf="@id/go_Back"
+        android:text="JOIN GROUP" />
+
+</RelativeLayout>
